fix(erd): 修复关系图shift不生效

--- a/src/pages/design/relation/style/index.less
+++ b/src/pages/design/relation/style/index.less
@@ -18,6 +18,7 @@
   &-empty {
     width: 100%;
     z-index: 1;
+    color: #bfccd6;
     position: absolute;
     //background: #FFFFFF;
   }
